<resources>
    <string name="app_name">EnglishLearning</string>
    <string name="username_login">Email</string>
    <string name="password_login">Password</string>
    <string name="titleApp">E-Learning</string>
    <string name="text_login">Log In</string>
    <string name="text_SignUp">Sign Up</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="remember_login">Remember log in</string>
    <string name="error_login">Có lỗi xảy ra</string>
    <string name="login_done">Đăng nhập thành công</string>
    <string name="tk_khongTonTai">Tài khoản không tồn tại.</string>
    <string name="Exception">Exception</string>
    <string name="StackTrace">StackTrace</string>
    <string name="thongbao">Thông báo</string>
    <string name="loading">Loading</string>
    <string name="not_internet">Không có kết nối mạng !</string>
    <string name="content_type">Content-Type</string>
    <string name="application_json">application/json</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirmation_password">Confirmation password</string>
    <string name="register">Register</string>
    <string name="error_length_password">Password must least 6 character!</string>
    <string name="error_password_confimation">Password confirmation not match!</string>
    <string name="error_email">Please enter correct email !</string>
    <string name="register_error">Register Error</string>
    <string name="register_successfully">Register successfully!</string>
    <string name="title_activity_update_profile">UpdateProfileActivity</string>
    <string name="old_password_update">Old Password</string>
    <string name="new_password_update">New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="full_name">Full Name</string>
    <string name="update_successfully">Updated successfully!</string>
    <string name="error_update_profile">update profile error</string>
    <string name="error_get_image">get image error</string>
    <string name="select_image">Select image</string>
    <string name="error_get_data">Error get data user</string>
    <string name="sign_out">Sign Out</string>
    <string name="update">Update</string>
    <string name="word_list">Word List</string>
    <string name="lesson">Lesson</string>
    <string name="category">Category</string>
    <string name="name_user">Nguyen Van A</string>
    <string name="email_user">example@railstutorial.org</string>
    <string name="lession_learned">Category</string>
    <string name="category_name">Category Name</string>
    <string name="id">id</string>
    <string name="confirrn_signout">You really wanna log out?</string>
    <string name="infor">Thông báo</string>
    <string name="thoat">OK</string>
    <string name="huy">Cancel</string>
    <string name="response_null">Response category null</string>
    <string name="response_error">Response words error</string>
    <string name="response_done">Response words done</string>
    <string name="information_dialog">Thông báo</string>
    <string name="cancel">Cancel</string>
    <string name="status">Status</string>
    <string name="misspage">Input can not be blank .</string>
    <string name="page">Page :</string>
    <string name="per_page">Per page :</string>
    <string name="create_lesson">Create Lesson</string>
    <string name="implement_listener">must implement OnListCategoryClickItem</string>
    <string name="word">Word</string>
    <string name="lesson_name">Lesson Name</string>
    <string name="submit">Submit</string>
    <string name="cancell">Cancel</string>
    <string name="hetbai">Out of lesson !</string>
    <string name="thieu_word">Miss word !</string>
    <string name="onListWordsClickItem">must implement OnListWordsClickItem</string>
    <string name="no_data_to_speech">No Data</string>
    <string name="err_cannot_read_list_lesson">Error cannot read list lesson</string>
    <string name="title_word_list">Word List</string>
    <string name="error_get_word_list">Error get word list</string>
    <string name="export_pdf">Export PDF</string>
    <string name="export_csv">Export CSV</string>
    <string name="export_tsv">Export TSV</string>
    <string name="export_csv_success">Export CSV format success</string>
    <string name="export_tsv_success">Export TSV format success</string>
    <string name="export_pdf_success">Export PDF file success</string>
    <string name="error_export_tsv">Export TSV file failed</string>
    <string name="error_export_csv">Export CSV file failed</string>
    <string name="error_export_pdf">Export PDF file failed</string>
    <string name="title_result_lesson">Lesson</string>
    <string name="activities">Activities</string>
    <string name="back">Back</string>
    <string name="press_back_again_to_exit">Press back again to exit app</string>
    <string name="user_activities">User Activities</string>
    <string name="message_invalid">message</string>
    <string name="answer">Answer</string>
    <string name="question">Question</string>
    <string name="pass_not_blank">Password not blank !</string>
    <string name="sync_server">Synchronize data from server</string>
    <string name="error_sign_out">Error signout</string>
    <string name="update_done">Update done !</string>
    <string name="not_changed_image">Not changed image</string>
    <string name="corrected">Corrected :</string>
    <string name="words">Words</string>
    <string name="info_lesson">Go to result lesson .</string>
    <string name="elearning_system">E-Learning System</string>
    <string name="list_category">List of category</string>
    <string name="drawer_open">Home</string>
    <string name="drawer_close">Category</string>
    <string name="new_words">New</string>
    <string name="learned">Learned</string>
    <string name="all">All</string>
    <string name="divider_item_word_list">:</string>
    <string name="dialog_loading_message">Loading. Please wait…</string>
    <string name="sign_up_now">Sig Up Now (Free)</string>
</resources>
