<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLogin"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titleApp"
        android:textColor="@color/textColorLogin"
        android:textSize="@dimen/title_size_60" />

    <EditText
        android:id="@+id/edit_username_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_70"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#616161"
        android:drawableLeft="@drawable/ic_account"
        android:hint="@string/username_login"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/edit_password_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_70"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#616161"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/password_login"
        android:inputType="textPassword"
<<<<<<< b71bbd0c36c644fd0d7e02d2ed1808fc9c7d5a67
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />
=======
        android:textColor="@android:color/black"
        android:textColorHint="@color/ColorHint" />
>>>>>>> create new lesson

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/chechbox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/remember_login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_marginTop_80"
        android:background="@drawable/button_background"
        android:text="@string/text_login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/text_SignUp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_15" />

</LinearLayout>
