<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AlertDialog.AppCompat.Light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLogin"
    tools:showIn="@layout/activity_update_profile"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.framgia.fel1.activity.UpdateProfileActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">
            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/edit_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password_update"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/edit_password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/retype_password"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:inputType="textPersonName"
                />
            <ImageView
                android:id="@+id/image_avatar"
                android:layout_width="@android:dimen/thumbnail_width"
                android:layout_height="@android:dimen/thumbnail_width"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_menu_gallery"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>