<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorsplash"
    tools:context="com.framgia.fel1.activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_action_bar_default_height_material"
            android:layout_marginBottom="@dimen/activity_marginTop_40"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/abc_action_bar_default_height_material"
                android:layout_marginBottom="@dimen/activity_marginTop_80"
                android:background="@color/colorPrimary"
                app:theme="@style/Base.V7.Theme.AppCompat">

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/textColorLogin"
                    android:textSize="@dimen/text_size_20"/>
            </android.support.v7.widget.Toolbar>

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_view"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="@dimen/activity_horizontal_margin"/>

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_view"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/activity_horizontal_margin"/>

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_view"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/password_login"
                android:inputType="textPassword"
                android:padding="@dimen/activity_horizontal_margin"/>

            <EditText
                android:id="@+id/edit_password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_view"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/confirmation_password"
                android:inputType="textPassword"
                android:padding="@dimen/activity_horizontal_margin"/>

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/abc_action_button_min_height_material"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/button_background"
                android:text="@string/register"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@android:color/darker_gray"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>
</FrameLayout>